# image-editing-assistant

./: .dockerignore  .env.example  .gitignore  DOCKER.md  Dockerfile  README.md  docker-compose.yml  example_usage.py  gradio_ui.py  launch_ui.py  main.py  pyproject.toml  system.py  test_gemini_local_edit.py  test_integration.py  test_local_edit.py  test_main.py
_archived/: claude4.py  demo.py
logic/: assistant.py  gemini_local_edit_agent.py  global_edit_agent.py  info_agent.py  local_edit_agent.py  models.py  router_agent.py
model/: gemini.py
